test/expressions/diten/uintHexOverflow.good
uintHexOverflow.chpl:1: error: error building numeric literal: Integer literal overflow: '0x10000000000000000' is too big for type 'uint64'
